--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,7 +4,6 @@
     font-size: 0.9;
     font-family: sans-serif;
     max-width: 800px;
-    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); */
     border: 1px solid;
     padding: 10px;
     box-shadow: 5px 10px #00A86B;
@@ -25,23 +24,39 @@ tbody
     overflow-y:scroll;
     display: block;
 
+    background-color: #F5F5F5;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px 0 4px 0;
+    color: #3B3C3E;
+    font-size: 12px;
+    font-weight: bold;
+    left: -1px;
+    padding: 10px 7px 5px;
+
 }
 
 .styled-table thead tr{
-    /* background-color: #009879; */
     color: #ffffff;
     text-align: left;
   
    
    
 }
-.styled-table thead tr th{
-    padding-right: 55px!important;
-}
+ .styled-table thead tr th{
+    padding-right: 30px!important;
+    padding-left: 20px!important;
+    width: 100px !important;
+   
+} 
 
 .styled-table th,
 .styled-table td{
-    padding: 12px 15px!important
+    padding: 12px 15px!important;
+    padding-right: 30px!important;
+    padding-left: 18px!important;
+   width:95px!important;
+
+    
 }
 
 
@@ -75,17 +90,26 @@ tbody
 }
 
 .btn-edit{
-    background-color: #008cba;
+    background-color: #AFEEEE;
+    padding: 1.8px 1.8px 1.8px 1.8px;
+    margin-right: 5px;
+    color: #696969;
 }
 
 .btn-delete{
-    background-color: #f44336;
-}
+    background-color: #FF6347;
+    padding: 1.8px 1.8px 1.8px 1.8px;
+    margin-right: 5px;
+    color: 	#585858
+}  
 
 .btn-view{
-    /* background-color: #e7e7e7 ; */
-    background-color: #39FF14;
+    background-color: #90EE90;
+    padding: 1.8px 1.8px 1.8px 1.8px;
+    margin-right: 5px; 
+    color: 	#696969
 }
+
 
 .btn-task{
     background-color: #e82764;
